<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

   <ImageView
       android:id="@+id/logo"
       android:layout_width="@dimen/logo_width"
       android:layout_height="@dimen/logo_height"
       android:src="@drawable/udacity_logo_sideways"
       android:contentDescription="@string/udacity"/>

    <TextView
        android:id="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/logo"
        android:layout_toEndOf="@id/logo"
        android:paddingTop="20sp"
        android:paddingBottom="8sp"
        android:autoLink="map"
        android:text="@string/address" />

    <TextView
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/logo"
        android:layout_toEndOf="@id/logo"
        android:layout_below="@id/address"
        android:paddingBottom="8sp"
        android:autoLink="phone"
        android:text="@string/phone"/>

    <TextView
        android:id="@+id/website"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/logo"
        android:layout_toEndOf="@id/logo"
        android:layout_below="@id/phone"
        android:layout_above="@id/tabletart"
        android:autoLink="web"
        android:text="@string/website"/>

    <ImageView
        android:id="@+id/tabletart"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/logo"
        android:scaleType="fitXY"
        android:src="@drawable/imagine"
        android:contentDescription="@string/tablet"/>

</RelativeLayout>

